2009-05-16  Vivek Dasmohapatra  <vivek@etla.org>

	* signals/file_transfers.c (_elim_ft_ui_op_create): allocate unique uid
	(_elim_ft_ui_op_destroy): emit transfer-status call
	(_elim_ft_ui_op_add)    : emit transfer-status call
	(_elim_ft_ui_op_cancel) : emit transfer-status call
	(_elim_ft_ui_op_update) : emit transfer-progress call

	* elisp/garak.el: handle file transfer status calls and provide
	                  file transfer tracking UI.

	* elisp/elim.el : handle new file transfer calls

2009-05-15  Vivek Dasmohapatra  <vivek@etla.org>

	* make/elim-func-handlers-c.sh: echo -n not portable (OSX, maybe others)

	* ui_ops/notify_ui_ops.c:
	(_elim_notify_track_images, _elim_close_notify): 64 bit size warning.

	* elisp/elim.el:
	(elim-update-process-data): abstracted out process data alist faff.
	(elim-request-item)       : label buttons correctly for file request.
	                            improve widget layout/info for file request.
	
	* elisp/garak.el (garak-cmd-prefs): /prefs command
	
	* Makefile                : build/link new signals directory

	* signals/file_transfers.c: 
	(elim_ft_signals_init) : file transfer signals handled.
	(_elim_ft_ui_op_update): file transfer progress support.
	(_elim_signal_ft_file) : file transfer meta data to client on signals.

	* elim-rpc.h (AL_NUM): protocol float alist member helper macro.

	* xnode/xnode.c (xnode_alist_item_number): protocol float support.

2009-05-14  Vivek Dasmohapatra  <vivek@etla.org>

	* elisp/garak.el        : Fetch and display buddy info data, including
	                          support for markup and images.

	* elisp/elim.el         : interpret more markup (bold, italic, newline)
	                          fetch image data by ID (synchronous call)

	* handlers/image.c      : fetch image data by imgstore ID

	* ui_ops/notify_ui_ops.c: track image id refs in _elim_notify_userinfo
	                          and _elim_close_notify.
